[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Storm/Storm.gd" type="Script" id=1]
[ext_resource path="res://Levels/Storm/Lightning.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Storm/Rain.tscn" type="PackedScene" id=3]

[node name="Storm" type="Node2D"]
z_index = 20
script = ExtResource( 1 )

[node name="Lightning" parent="." instance=ExtResource( 2 )]

[node name="Rain" parent="." instance=ExtResource( 3 )]

[node name="StormDuration" type="Timer" parent="."]

[node name="ClearDuration" type="Timer" parent="."]

[node name="LightningInterval" type="Timer" parent="."]
